# python-semver--tomschr

./: README.rst  pyproject.toml
docs/: conf.py  migratetosemver3.rst  usage.rst
src/semver/: _types.py  version.py
tests/: test_semver.py
