[build-system]
requires = [
  # sync with setup.py until we discard non-pep-517/518
  "setuptools>=40.0",
  "setuptools-scm",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "semver"
version = "3.0.0-alpha0"
description = "Python helper for Semantic Versioning (http://semver.org/)"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
keywords = ["semantic versioning", "version", "semver", ]
authors = [
  {name = "Kostiantyn Rybnikov", email = "k-bx@k-bx.com"}
]
maintainers = [
  {name = "Thomas Schraitle", email = ""}
]
classifiers=[
        # See https://pypi.org/pypi?%3Aaction=list_classifiers
        "Environment :: Web Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        # "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov[all]",
]
doc = ["sphinx",
       "sphinx-argparse",
]


[project.urls]
homepage = "https://github.com/python-semver/python-semver"
documentation = "https://python-semver.rtfd.io/"
changelog = "https://github.com/python-semver/python-semver/blob/master/CHANGELOG.rst"

[project.scripts]
pysemver = "semver:main"


[tool.flit.metadata]
module = "semver"
homepage = "https://github.com/python-semver/python-semver"
license = "License :: OSI Approved :: BSD License"



[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
# diff = true
exclude = '''
(
  /(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | build
    | dist
  )/
)
'''

[tool.towncrier]
package = "semver"
# package_dir = "src"
filename = "CHANGELOG.rst"
directory = "changelog.d/"
title_format = "Version {version}"
template = "changelog.d/_template.rst"
# issue_format = "`#{issue} <https://github.com/python-attrs/attrs/issues/{issue}>`_"
# issue_format = ":gh:`{issue}`"

  # [[tool.towncrier.type]]
  # directory = "breaking"
  # name = "Breaking Changes"
  # showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  # [[tool.towncrier.type]]
  # directory = "improvement"
  # name = "Improvements"
  # showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true


[tool.poetry]
name = "semver"
version = "2.9.0"
description = "Python helper for Semantic Versioning (http://semver.org/)"
authors = [
    "Kostiantyn Rybnikov <k-bx@k-bx.com>",
    "Sébastien Celles <s.celles@gmail.com>",
]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/python-semver/python-semver"
repository = "https://github.com/python-semver/python-semver"
documentation = "https://python-semver.readthedocs.io/en/latest/"
keywords = ["semantic versioning", "semver", "version", ]
classifiers = [
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "src/semver/" },
    ]
include = ["CHANGELOG.rst", "CONTRIBUTORS", "README.rst"]


[tool.poetry.scripts]
pysemver = "semver:main"


[tool.poetry.dependencies]
python = "^3.5"


[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
isort = "^4.3"

